<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Meta -->
    <string name="app_name">Sprek i Gjovik</string>
    
    <!-- Map menu -->
	<string name="action_settings">Settings</string>
	<string name="action_showpolelist">Show pole list</string>
	<string name="gps_disabled_warning">GPS is disabled.\nClick to enable</string>
	<string name="gps_marker">GPS signal indicator</string>
		
	<!-- drawer button -->
	<string name="drawer_open">Open route list</string>
	<string name="drawer_close">Close route list</string>
    
    <!-- Track -->
    <string name="action_track">Start tracking</string>
    <string name="action_tracking">Stop tracking</string>
    <string name="tracking_in_progress">Tracking in progress..</string>

    <!-- Notification -->
    <string name="notification_title">Sprek i Gjovik</string>
    <string name="notification_subtitle">Tracking route. Click to open</string>
    <string name="notification_ticker">Tracking route..</string>
    
    <!-- Difficulties -->
    <string name="pole_difficulty_white">Unknown difficulty</string>
    <string name="pole_difficulty_green">Easy difficulty</string>
    <string name="pole_difficulty_blue">Normal difficulty</string>
    <string name="pole_difficulty_red">Hard difficulty</string>
    <string name="pole_difficulty_black">Very hard difficulty</string>
    
    <!-- PoleMarker info window -->
    <!-- \u0020 equals space. XML thing ignores regular spaces -->
    <string name="polemarker_info_name_prefix">Name:\u0020</string>
    <string name="polemarker_info_id_prefix">ID:\u0020</string>
    <string name="polemarker_info_location_prefix">Location:\u0020</string>
    <string name="polemarker_info_distance_prefix">Distance:\u0020</string>
    <string name="polemarker_info_time_prefix">ETA:\u0020</string>

    <!-- Settings -->
    <string name="pref_no_internet">Needs internet to get poles</string>
    <string name="poles_never_updated">Never updated</string>
    <string name="pref_map_cat_title">Map settings</string>
    <string name="pref_route_cat_title">Route settings</string>
    <string name="pref_poles_title">Poles</string>
    <string name="pref_fetch_poles">Fetch poles</string>
    <string name="pref_fetch_poles_summary">Fetch fresh list of poles from server\nLast updated:\u0020</string>
    <string name="pref_use_customtiles">Use custom tiles</string>
    <string name="pref_use_customtiles_summary">Use custom orientation map tiles</string>
    <string name="pref_show_gps">Show GPS marker</string>
    <string name="pref_show_gps_summary">Shows a dot on the map indicating current location</string>
    <string name="pref_show_poledist">Show pole distance</string>
    <string name="pref_show_poledist_summary">Shows the distance to each pole</string>
    
    <string name="pref_delete_routes">Delete routes</string>
    <string name="pref_delete_routes_summary">Delete all stored routes</string>
    <string name="pref_delete_routes_confirm_title">Confirm</string>
    <string name="pref_delete_routes_confirm_text">Are you sure you want to delete all routes?</string>
    
    <!-- Dialog confirm -->
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    
    <!-- Units -->
    <string name="unit_since">ago</string>
    <string name="unit_weeks">w</string>
    <string name="unit_days">days</string>
    <string name="unit_hours">h</string>
    <string name="unit_minutes">min</string>
    <string name="unit_seconds">sec</string>
    <string name="unit_kilometer">km</string>
    <string name="unit_meter">m</string>

</resources>
