<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory 
		android:title="@string/pref_map_cat_title"
		android:key="pref_key_storage_settings">
	    <CheckBoxPreference
	    	android:defaultValue="true"
			android:key="prefMapUseCustTiles"
			android:summary="@string/pref_use_customtiles_summary"
			android:title="@string/pref_use_customtiles" />
	    <CheckBoxPreference
	    	android:defaultValue="false"
			android:key="prefMapShowGPSLoc"
			android:summary="@string/pref_show_gps_summary"
			android:title="@string/pref_show_gps" />
	    <CheckBoxPreference
	    	android:defaultValue="false"
			android:key="prefMapShowPoleDistance"
			android:summary="@string/pref_show_poledist_summary"
			android:title="@string/pref_show_poledist" />
	</PreferenceCategory>
</PreferenceScreen>
